--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,3 +22,6 @@ flake8 = "^7.0.0"
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.poetry.scripts]
+app = "page_analyzer.app:main"
