--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,10 +21,10 @@ beautifulsoup4 = "^4.12.3"
 
 [tool.poetry.group.dev.dependencies]
 flake8 = "^7.0.0"
+pytest = "^8.1.1"
+pytest-cov = "^5.0.0"
+pytest-playwright = "^0.4.4"
 
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
-
-[tool.poetry.scripts]
-app = "page_analyzer.app:main"
